import("//huhi/browser/translate/buildflags/buildflags.gni")
import("//huhi/build/config.gni")
import("//huhi/build/rust/config.gni")
import("//huhi/components/binance/browser/buildflags/buildflags.gni")
import("//huhi/components/huhi_ads/browser/buildflags/buildflags.gni")
import(
    "//huhi/components/huhi_perf_predictor/browser/buildflags/buildflags.gni")
import("//huhi/components/gemini/browser/buildflags/buildflags.gni")
import("//huhi/components/crypto_dot_com/browser/buildflags/buildflags.gni")
import("//huhi/components/huhi_referrals/buildflags/buildflags.gni")
import("//huhi/components/huhi_rewards/browser/buildflags/buildflags.gni")
import("//huhi/components/huhi_sync/buildflags/buildflags.gni")
import("//huhi/components/huhi_wallet/buildflags/buildflags.gni")
import("//huhi/components/huhi_wayback_machine/buildflags/buildflags.gni")
import("//huhi/components/huhi_webtorrent/browser/buildflags/buildflags.gni")
import("//huhi/components/gemini/browser/buildflags/buildflags.gni")
import("//huhi/components/greaselion/browser/buildflags/buildflags.gni")
import("//huhi/components/ipfs/buildflags/buildflags.gni")
import("//huhi/components/moonpay/browser/buildflags/buildflags.gni")
import("//huhi/components/speedreader/buildflags.gni")
import("//huhi/components/tor/buildflags/buildflags.gni")
import("//huhi/test/testing.gni")
import("//chrome/common/features.gni")
import("//components/gcm_driver/config.gni")
import("//testing/test.gni")
import("//third_party/widevine/cdm/widevine.gni")

if (is_android) {
  import("//build/config/android/rules.gni")
  import("//chrome/android/chrome_public_apk_tmpl.gni")
}

static_library("huhi_test_support_unit") {
  testonly = true

  sources = [
    "base/huhi_testing_profile.cc",
    "base/huhi_testing_profile.h",
    "base/huhi_unit_test_suite.cc",
    "base/huhi_unit_test_suite.h",
    "base/run_all_unittests.cc",
  ]

  public_deps = [
    "//base",
    "//chrome:resources",
    "//chrome:strings",
    "//chrome/browser",
    "//chrome/common",
    "//chrome/test:test_support",
  ]

  deps = [
    "//huhi/browser/profiles",
    "//huhi/common:pref_names",
    "//components/gcm_driver:gcm_buildflags",
    "//components/gcm_driver",
    "//mojo/core/embedder",
  ]

  if (is_win) {
    deps += [ "//chrome/install_static/test:test_support" ]
  }
}

source_set("test_support") {
  testonly = true
  if (!is_android) {
    sources = [
      "//huhi/browser/profiles/huhi_unittest_profile_manager.cc",
      "//huhi/browser/profiles/huhi_unittest_profile_manager.h",
    ]
    deps = [
      "//base",
      "//huhi/browser/profiles",
      "//huhi/test:huhi_test_support_unit",
      "//chrome/browser",
      "//chrome/test:test_support",
      "//components/sync_preferences",
    ]
  }
}

test("huhi_unit_tests") {
  testonly = true

  sources = [
    "../../components/domain_reliability/test_util.cc",
    "../../components/domain_reliability/test_util.h",
    "//huhi/browser/huhi_content_browser_client_unittest.cc",
    "//huhi/browser/huhi_resources_util_unittest.cc",
    "//huhi/browser/browsing_data/huhi_browsing_data_remover_delegate_unittest.cc",
    "//huhi/browser/browsing_data/counters/huhi_site_settings_counter_unittest.cc",
    "//huhi/browser/download/huhi_download_item_model_unittest.cc",
    "//huhi/browser/net/huhi_ad_block_tp_network_delegate_helper_unittest.cc",
    "//huhi/browser/net/huhi_block_safebrowsing_urls_unittest.cc",
    "//huhi/browser/net/huhi_common_static_redirect_network_delegate_helper_unittest.cc",
    "//huhi/browser/net/huhi_httpse_network_delegate_helper_unittest.cc",
    "//huhi/browser/net/huhi_network_delegate_base_unittest.cc",
    "//huhi/browser/net/huhi_site_hacks_network_delegate_helper_unittest.cc",
    "//huhi/browser/net/huhi_static_redirect_network_delegate_helper_unittest.cc",
    "//huhi/browser/net/huhi_system_request_handler_unittest.cc",
    "//huhi/browser/profiles/profile_util_unittest.cc",
    "//huhi/chromium_src/chrome/browser/history/history_utils_unittest.cc",
    "//huhi/chromium_src/chrome/browser/lookalikes/lookalike_url_navigation_throttle_unittest.cc",
    "//huhi/chromium_src/chrome/browser/signin/account_consistency_disabled_unittest.cc",
    "//huhi/chromium_src/components/autofill/core/browser/autofill_experiments_unittest.cc",
    "//huhi/chromium_src/components/metrics/enabled_state_provider_unittest.cc",
    "//huhi/chromium_src/components/password_manager/core/browser/password_bubble_experiment_unittest.cc",
    "//huhi/chromium_src/components/variations/service/field_trial_unittest.cc",
    "//huhi/chromium_src/components/version_info/huhi_version_info_unittest.cc",
    "//huhi/chromium_src/net/cookies/huhi_canonical_cookie_unittest.cc",
    "//huhi/chromium_src/services/network/public/cpp/cors/cors_unittest.cc",
    "//huhi/common/huhi_content_client_unittest.cc",
    "//huhi/components/assist_ranker/ranker_model_loader_impl_unittest.cc",
    "//huhi/components/huhi_private_cdn/private_cdn_helper_unittest.cc",
    "//huhi/components/huhi_shields/browser/ad_block_regional_service_unittest.cc",
    "//huhi/components/huhi_shields/browser/adblock_stub_response_unittest.cc",
    "//huhi/components/huhi_shields/browser/cosmetic_merge_unittest.cc",
    "//huhi/components/huhi_shields/browser/https_everywhere_recently_used_cache_unittest.cpp",
    "//huhi/components/content_settings/core/browser/huhi_content_settings_pref_provider_unittest.cc",
    "//huhi/components/content_settings/core/browser/huhi_content_settings_utils_unittest.cc",
    "//huhi/components/l10n/common/locale_util_unittest.cc",
    "//huhi/components/ntp_background_images/browser/ntp_background_images_service_unittest.cc",
    "//huhi/components/ntp_background_images/browser/ntp_background_images_source_unittest.cc",
    "//huhi/components/ntp_background_images/browser/view_counter_model_unittest.cc",
    "//huhi/components/ntp_background_images/browser/view_counter_service_unittest.cc",
    "//huhi/components/ntp_widget_utils/browser/ntp_widget_utils_oauth_unittest.cc",
    "//huhi/components/ntp_widget_utils/browser/ntp_widget_utils_region_unittest.cc",
    "//huhi/components/p3a/huhi_p2a_protocols_unittest.cc",
    "//huhi/components/rappor/log_uploader_unittest.cc",
    "//huhi/components/translate/core/browser/translate_language_list_unittest.cc",
    "//huhi/components/weekly_storage/weekly_storage_unittest.cc",
    "//huhi/third_party/libaddressinput/chromium/chrome_metadata_source_unittest.cc",
    "//huhi/vendor/huhi_base/random_unittest.cc",
    "//chrome/browser/custom_handlers/test_protocol_handler_registry_delegate.cc",
    "//chrome/browser/custom_handlers/test_protocol_handler_registry_delegate.h",
    "//components/bookmarks/browser/bookmark_model_unittest.cc",
  ]

  defines = huhi_service_key_defines

  deps = [
    ":test_support",
    "//huhi/base:base_unittests",
    "//huhi/app:command_ids",
    "//huhi/app/theme:huhi_theme_resources_grit",
    "//huhi/browser/autoplay",
    "//huhi/browser:browser_process",
    "//huhi/browser/browsing_data",
    "//huhi/browser/download",
    "//huhi/browser/metrics/test:huhi_metrics_unit_tests",
    "//huhi/browser/net",
    "//huhi/browser/new_tab:unittest",
    "//huhi/browser/safebrowsing",
    "//huhi/browser/themes",
    "//huhi/browser/tor:unit_tests",
    "//huhi/browser/translate/buildflags",
    "//huhi/browser/ui",
    "//huhi/common:network_constants",
    "//huhi/common:pref_names",
    "//huhi/browser/profiles:profiles",
    "//huhi/components/huhi_component_updater/browser",
    "//huhi/components/huhi_ads/test:huhi_ads_unit_tests",
    "//huhi/components/huhi_private_cdn",
    "//huhi/components/huhi_referrals/browser",
    "//huhi/components/huhi_referrals/buildflags",
    "//huhi/components/huhi_referrals/common",
    "//huhi/components/huhi_shields/browser",
    "//huhi/components/huhi_shields/common",
    "//huhi/components/huhi_wallet/buildflags",
    "//huhi/components/l10n/common",
    "//huhi/components/huhi_rewards/test:huhi_rewards_unit_tests",
    "//huhi/components/ipfs/test:huhi_ipfs_unit_tests",
    "//huhi/components/ntp_background_images/browser",
    "//huhi/components/ntp_background_images/common",
    "//huhi/components/p3a",
    "//huhi/components/tor/buildflags",
    "//huhi/components/weekly_storage",
    "//huhi/vendor/adblock_rust_ffi",
    "//huhi/components/ntp_widget_utils/browser",
    "//huhi/components/tor:tor_unit_tests",
    "//huhi/net/proxy_resolution:unit_tests",
    "//huhi/vendor/huhi_base",
    "//chrome/app:command_ids",
    "//chrome:browser_dependencies",
    "//chrome:child_dependencies",
    "//chrome/test:test_support",
    "//components/assist_ranker",
    "//components/assist_ranker/proto",
    "//components/bookmarks/browser",
    "//components/bookmarks/common",
    "//components/content_settings/core/test:test_support",
    "//components/permissions",
    "//components/prefs",
    "//components/prefs:test_support",
    "//components/pref_registry",
    "//components/query_parser",
    "//components/signin/public/base",
    "//components/sync_preferences",
    "//components/translate/core/browser:test_support",
    "//components/country_codes",
    "//components/domain_reliability:domain_reliability",
    "//components/language/core/browser",
    "//components/os_crypt:test_support",
    "//components/variations/service:buildflags",
    "//components/version_info",
    "//content/public/common",
    "//content/test:test_support",
    "//extensions/common:common_constants",
    "//google_apis/gcm",
    "//google_apis/gcm:test_support",
    "//mojo/core/embedder",
    "//services/network:test_support",
    "//services/network/public/cpp",
  ]

  if (toolkit_views) {
    deps += [
      "//chrome/browser/ui/views",
    ]
  }

  data = [ "data/" ]

  configs += [ "//huhi/build/geolocation" ]

  public_deps = [
    ":huhi_test_support_unit",
    "//base",
    "//base/test:test_support",
    "//huhi:browser_dependencies",
    "//huhi/browser",
    "//huhi/common",
    "//huhi/components/content_settings/core/browser",
    "//huhi/renderer",
    "//huhi/utility",
    "//testing/gtest",
  ]

  if (!is_android) {
    sources += [
      "../utility/importer/chrome_importer_unittest.cc",
      "//huhi/app/huhi_command_line_helper_unittest.cc",
      "//huhi/browser/resources/settings/brandcode_config_fetcher_unittest.cc",
      "//huhi/browser/resources/settings/reset_report_uploader_unittest.cc",
      "//huhi/browser/themes/huhi_theme_service_unittest.cc",
      "//huhi/browser/ui/toolbar/huhi_location_bar_model_delegate_unittest.cc",
      "//huhi/browser/ui/views/accelerator_table_unittest.cc",
      "//huhi/chromium_src/chrome/browser/devtools/url_constants_unittest.cc",
      "//huhi/chromium_src/chrome/browser/profiles/profile_avatar_icon_util_unittest.cc",
      "//huhi/chromium_src/chrome/browser/ui/bookmarks/huhi_bookmark_context_menu_controller_unittest.cc",
      "//chrome/browser/push_messaging/push_messaging_app_identifier_unittest.cc",
      "//chrome/browser/push_messaging/push_messaging_notification_manager_unittest.cc",
      "//chrome/browser/push_messaging/push_messaging_service_unittest.cc",
      "//chrome/common/importer/mock_importer_bridge.cc",
      "//chrome/common/importer/mock_importer_bridge.h",
      "//components/gcm_driver/account_tracker_unittest.cc",
      "//components/gcm_driver/gcm_account_mapper_unittest.cc",
      "//components/gcm_driver/gcm_account_tracker_unittest.cc",
      "//components/gcm_driver/gcm_client_impl_unittest.cc",
      "//components/gcm_driver/gcm_delayed_task_controller_unittest.cc",
      "//components/gcm_driver/gcm_driver_desktop_unittest.cc",
      "//components/gcm_driver/gcm_driver_unittest.cc",

      # TODO(samartnik): this should work on Android, we will review it once unit tests are set up on CI
      "//huhi/browser/autoplay/autoplay_permission_context_unittest.cc",
      "//huhi/chromium_src/chrome/browser/external_protocol/external_protocol_handler_unittest.cc",
      "//huhi/chromium_src/components/search_engines/huhi_template_url_prepopulate_data_unittest.cc",
      "//huhi/chromium_src/components/search_engines/huhi_template_url_service_util_unittest.cc",
      "//huhi/chromium_src/components/translate/core/browser/translate_manager_unittest.cc",
      "//huhi/components/huhi_shields/browser/huhi_shields_util_unittest.cc",
      "//huhi/components/omnibox/browser/fake_autocomplete_provider_client.cc",
      "//huhi/components/omnibox/browser/fake_autocomplete_provider_client.h",
      "//huhi/components/omnibox/browser/suggested_sites_provider_unittest.cc",
      "//huhi/components/omnibox/browser/topsites_provider_unittest.cc",
    ]
  }

  # On Windows, huhi_install_static_unittests covers channel test.
  if (is_mac || is_linux) {
    sources += [ "//huhi/common/huhi_channel_info_unittest.cc" ]
  }

  if (is_mac) {
    sources += [
      "//huhi/chromium_src/chrome/browser/shell_integration_unittest_mac.cc",
      "//huhi/chromium_src/chrome/common/chrome_constants_unittest_mac.cc",
    ]
  }

  if (binance_enabled) {
    sources +=
        [ "//huhi/components/binance/browser/binance_json_parser_unittest.cc" ]
    deps += [
      "//huhi/components/binance/browser",
      "//huhi/components/content_settings/core/common",
    ]
  }

  if (gemini_enabled) {
    sources +=
        [ "//huhi/components/gemini/browser/gemini_json_parser_unittest.cc" ]
    deps += [
      "//huhi/components/binance/browser",
      "//huhi/components/content_settings/core/common",
      "//huhi/components/gemini/browser"
    ]
  }

  if (crypto_dot_com_enabled) {
    sources += [
      "//huhi/components/crypto_dot_com/browser/crypto_dot_com_json_parser_unittest.cc"
    ]
    deps += [
      "//huhi/components/crypto_dot_com/browser",
    ]
  }

  if (is_linux) {
    configs += [ "//huhi/build/linux:linux_channel_names" ]
  }

  if (is_android) {
    deps += [
      ":huhi_public_test_apk",
      "//huhi:huhi_pak_assets",
      "//chrome:chrome_android_core",
      "//chrome/android:chrome_apk_paks",
      "//chrome/test/android:chrome_java_test_support",
      "//components/gcm_driver/instance_id/android:instance_id_driver_test_support_java",
      "//v8:v8_external_startup_data_assets",
    ]
    data += [
      "$root_gen_dir/chrome/android/chrome_apk_paks/chrome_100_percent.pak",
      "$root_gen_dir/chrome/android/chrome_apk_paks/locales/en-US.pak",
      "$root_gen_dir/chrome/android/chrome_apk_paks/resources.pak",
      "$root_out_dir/huhi_100_percent.pak",
      "$root_out_dir/huhi_resources.pak",
      "//huhi/components/huhi_perf_predictor/resources/entities-httparchive-nostats.json",
    ]
  } else {
    deps += [ ":huhi_installer_unittests" ]
  }

  if (enable_extensions) {
    sources += [
      "//huhi/browser/extensions/api/huhi_extensions_api_client_unittest.cc",
      "//huhi/chromium_src/extensions/browser/sandboxed_unpacker_unittest.cc",
      "//huhi/common/importer/chrome_importer_utils_unittest.cc",
      "//chrome/browser/extensions/extension_service_test_base.cc",
      "//chrome/browser/extensions/extension_service_test_base.h",
    ]

    deps += [
      "//huhi/browser/extensions",
      "//huhi/common/importer",
      "//components/crx_file",
      "//extensions/browser:test_support",
      "//extensions/browser/api/web_request",
      "//url",
    ]
  }

  if (enable_huhi_referrals) {
    sources += [
      "//huhi/browser/huhi_stats/huhi_stats_updater_unittest.cc",
    ]

    deps += [
      # This is only used in the unit test, not the browser test.
      # TODO(keur): Reminder to move this out when we migrate
      # stats browser tests into unit tests.
      "//huhi/browser/huhi_stats:stats_updater",
      "//huhi/components/huhi_stats/browser",
    ]

    if (!is_android) {
      sources += [
        # TODO(samartnik): this should work on Android, we will review it once unit tests are set up on CI
        "//huhi/browser/net/huhi_referrals_network_delegate_helper_unittest.cc",
      ]
    }
  }

  if (enable_huhi_webtorrent) {
    sources += [
      "//huhi/browser/extensions/huhi_webtorrent_navigation_throttle_unittest.cc",
      "//huhi/browser/net/huhi_torrent_redirect_network_delegate_helper_unittest.cc",
    ]

    deps += [
      "//huhi/common:pref_names",
      "//huhi/components/huhi_referrals/browser",
    ]
  }

  if (huhi_wallet_enabled) {
    sources += [ "//huhi/browser/extensions/huhi_wallet_unittest.cc" ]
    deps += [
      "//huhi/browser/huhi_wallet",
      "//huhi/common:pref_names",
      "//huhi/components/huhi_wallet",
    ]
  }

  if (enable_huhi_translate_go) {
    sources += [ "//huhi/browser/net/huhi_translate_redirect_network_delegate_helper_unittest.cc" ]
  }

  if (enable_huhi_translate_extension) {
    sources += [ "//huhi/browser/ui/views/translate/huhi_translate_bubble_view_unittest.cc" ]

    deps += [
      "//huhi/browser/ui",
      "//components/language/core/common",
    ]
  }

  if (enable_huhi_sync) {
    sources += [
      "//huhi/components/huhi_sync/crypto/crypto_unittest.cc",
      "//huhi/components/sync/driver/huhi_sync_auth_manager_unittest.cc",
      "//components/sync/base/model_type_unittest.cc",
      "//components/sync/driver/sync_auth_manager_unittest.cc",
      "//components/sync_device_info/device_info_sync_bridge_unittest.cc",
    ]

    deps += [
      "//huhi/components/huhi_sync:crypto",
      "//huhi/components/huhi_sync:network_time_helper",
      "//components/signin/public/identity_manager:test_support",
    ]
  }

  if (enable_tor) {
    sources += [
      # TODO(darkdh): move these out and use buildflag guard once it contains non tor specifics
      "//huhi/browser/profiles/huhi_profile_manager_unittest.cc",
    ]

    deps += [
      "//huhi/browser/profiles",
      "//huhi/browser/tor",
      "//huhi/components/huhi_webtorrent/browser",
      "//huhi/components/tor",
      "//third_party/blink/public/common",
    ]
  }

  if (enable_huhi_wayback_machine) {
    sources += [ "//huhi/components/huhi_wayback_machine/huhi_wayback_machine_utils_unittest.cc" ]

    deps += [
      "//huhi/components/huhi_wayback_machine",
    ]
  }

  if (enable_widevine) {
    if (is_win || is_mac) {
      sources += [ "//huhi/chromium_src/chrome/browser/component_updater/widevine_cdm_component_installer_unittest.cc" ]
    }

    if (is_linux) {
      sources += [
        "//huhi/browser/widevine/huhi_widevine_bundle_manager_unittest.cc",
      ]
    }
    deps += [
     "//huhi/app:huhi_generated_resources_grit_grit",
     "//huhi/browser/widevine",
     "//third_party/widevine/cdm:headers",
    ]
  }

  if (enable_huhi_perf_predictor) {
    sources += [
      "//huhi/components/huhi_perf_predictor/browser/bandwidth_linreg_unittest.cc",
      "//huhi/components/huhi_perf_predictor/browser/bandwidth_savings_predictor_unittest.cc",
      "//huhi/components/huhi_perf_predictor/browser/named_third_party_registry_unittest.cc",
      "//huhi/components/huhi_perf_predictor/browser/p3a_bandwidth_savings_tracker_unittest.cc",
    ]

    deps += [
      "//huhi/components/huhi_perf_predictor/browser",
      "//components/page_load_metrics/common",
    ]
  }

  if (enable_speedreader) {
    sources +=
        [ "//huhi/components/speedreader/rust/ffi/speedreader_unittest.cc" ]

    deps += [ "//huhi/components/speedreader" ]
  }

  if (ipfs_enabled) {
    sources += [
      "//huhi/browser/ipfs/content_browser_client_helper_unittest.cc",
      "//huhi/browser/net/ipfs_redirect_network_delegate_helper_unittest.cc",
    ]
    deps += [
      "//huhi/components/ipfs",
    ]
  }
}

if (!is_android && !is_ios) {
  test("huhi_installer_unittests") {
    deps = [
      "//base/test:run_all_unittests",
      "//base/test:test_support",
    ]

    if (is_mac) {
      # See chromium_src/base/mac/foundation_util.mm for why this is needed.
      deps += [ "//chrome/common" ]
    }

    if (is_win) {
      sources = [
        "//huhi/chromium_src/chrome/install_static/huhi_install_details_unittest.cc",
        "//huhi/chromium_src/chrome/install_static/huhi_install_modes_unittest.cc",
        "//huhi/chromium_src/chrome/install_static/huhi_install_util_unittest.cc",
        "//huhi/chromium_src/chrome/install_static/huhi_product_install_details_unittest.cc",
        "//huhi/chromium_src/chrome/install_static/huhi_user_data_dir_win_unittest.cc",
        "//huhi/chromium_src/chrome/installer/mini_installer/huhi_mini_installer_unittest.cc",
      ]
      include_dirs = [ "$target_gen_dir" ]
      deps += [
        "//base",
        "//chrome/chrome_elf:nt_registry",
        "//chrome/install_static:install_static_util",
        "//chrome/install_static/test:test_support",
        "//chrome/installer/mini_installer:lib",
        "//components/version_info:channel",
        "//components/version_info",
      ]
      public_deps = [
        "//testing/gmock",
        "//testing/gtest",
      ]
    }
  }
}

group("huhi_browser_tests_deps") {
  testonly = true
  if (huhi_chromium_build) {
    # force these to build for tests
    deps = [
      "//huhi",
      "//huhi:browser_dependencies",
      "//huhi:child_dependencies",
    ]
  }
}

static_library("browser_test_support") {
  testonly = true
  public_deps = [ "//chrome/test:test_support" ]

  sources = [
    "base/huhi_test_launcher_delegate.cc",
    "base/huhi_test_launcher_delegate.h",
  ]
}

static_library("browser_tests_runner") {
  testonly = true

  if (is_win) {
    deps = [ "//chrome/installer/util:strings" ]
  }

  public_deps = [ ":browser_test_support" ]

  sources = [ "base/browser_tests_main.cc" ]
}

if (!is_android) {
  test("huhi_browser_tests") {
    testonly = true

    sources = [
      "//huhi/app/huhi_main_delegate_browsertest.cc",
      "//huhi/app/huhi_main_delegate_runtime_flags_browsertest.cc",
      "//huhi/browser/autoplay/autoplay_permission_context_browsertest.cc",
      "//huhi/browser/huhi_content_browser_client_browsertest.cc",
      "//huhi/browser/huhi_profile_prefs_browsertest.cc",
      "//huhi/browser/huhi_resources_browsertest.cc",
      "//huhi/browser/huhi_shields/ad_block_service_browsertest.cc",
      "//huhi/browser/huhi_shields/cookie_pref_service_browsertest.cc",
      "//huhi/browser/huhi_stats/huhi_stats_updater_browsertest.cc",
      "//huhi/browser/browsing_data/huhi_clear_browsing_data_browsertest.cc",
      "//huhi/browser/devtools/huhi_devtools_ui_bindings_browsertest.cc",
      "//huhi/browser/extensions/api/huhi_shields_api_browsertest.cc",
      "//huhi/browser/extensions/api/huhi_theme_api_browsertest.cc",
      "//huhi/browser/extensions/huhi_base_local_data_files_browsertest.cc",
      "//huhi/browser/extensions/huhi_base_local_data_files_browsertest.h",
      "//huhi/browser/extensions/huhi_extension_functional_test.cc",
      "//huhi/browser/extensions/huhi_extension_functional_test.h",
      "//huhi/browser/extensions/huhi_extension_provider_browsertest.cc",
      "//huhi/browser/extensions/huhi_theme_event_router_browsertest.cc",
      "//huhi/browser/net/huhi_network_delegate_browsertest.cc",
      "//huhi/browser/net/huhi_network_delegate_hsts_fingerprinting_browsertest.cc",
      "//huhi/browser/net/huhi_site_hacks_network_delegate_helper_browsertest.cc",
      "//huhi/browser/net/huhi_system_request_handler_browsertest.cc",
      "//huhi/browser/net/global_privacy_control_network_delegate_helper_browsertest.cc",
      "//huhi/browser/policy/huhi_policy_browsertest.cc",
      "//huhi/browser/profiles/huhi_bookmark_model_loaded_observer_browsertest.cc",
      "//huhi/browser/profiles/huhi_profile_manager_browsertest.cc",
      "//huhi/browser/renderer_context_menu/huhi_mock_render_view_context_menu.cc",
      "//huhi/browser/renderer_context_menu/huhi_mock_render_view_context_menu.h",
      "//huhi/browser/renderer_context_menu/huhi_spelling_menu_observer_browsertest.cc",
      "//huhi/browser/search_engines/search_engine_provider_service_browsertest.cc",
      "//huhi/browser/search_engines/search_engine_tracker_browsertest.cc",
      "//huhi/browser/themes/huhi_dark_mode_prefs_migration_browsertest.cc",
      "//huhi/browser/themes/huhi_theme_service_browsertest.cc",
      "//huhi/browser/ui/bookmark/bookmark_tab_helper_browsertest.cc",
      "//huhi/browser/ui/huhi_browser_command_controller_browsertest.cc",
      "//huhi/browser/ui/content_settings/huhi_autoplay_blocked_image_model_browsertest.cc",
      "//huhi/browser/ui/toolbar/huhi_app_menu_model_browsertest.cc",
      "//huhi/browser/ui/views/bookmarks/bookmark_bar_browsertest.cc",
      "//huhi/browser/ui/views/huhi_actions/huhi_actions_container_browsertest.cc",
      "//huhi/browser/ui/views/omnibox/huhi_omnibox_view_views_browsertest.cc",
      "//huhi/browser/ui/views/omnibox/omnibox_autocomplete_browsertest.cc",
      "//huhi/browser/ui/views/profiles/huhi_profile_menu_view_browsertest.cc",
      "//huhi/browser/ui/views/tabs/huhi_tab_context_menu_contents_browsertest.cc",
      "//huhi/browser/ui/views/toolbar/huhi_toolbar_view_browsertest.cc",
      "//huhi/browser/ui/webui/huhi_welcome_ui_browsertest.cc",
      "//huhi/chromium_src/chrome/browser/media/router/media_router_feature_browsertest.cc",
      "//huhi/chromium_src/chrome/browser/profiles/profile_window_browsertest.cc",
      "//huhi/chromium_src/chrome/browser/safe_browsing/download_protection/check_client_download_request_base_browsertest.cc",
      "//huhi/chromium_src/chrome/browser/ui/views/location_bar/location_bar_view_browsertest.cc",
      "//huhi/chromium_src/chrome/browser/ui/views/tabs/tab_hover_card_bubble_view_browsertest.cc",
      "//huhi/chromium_src/components/content_settings/core/browser/huhi_content_settings_registry_browsertest.cc",
      "//huhi/chromium_src/components/favicon/core/favicon_database_browsertest.cc",
      "//huhi/chromium_src/third_party/blink/public/platform/disable_client_hints_browsertest.cc",
      "//huhi/chromium_src/third_party/blink/renderer/core/frame/reporting_observer_browsertest.cc",
      "//huhi/common/huhi_channel_info_browsertest.cc",
      "//huhi/components/huhi_shields/browser/https_everywhere_service_browsertest.cc",
      "//huhi/components/huhi_shields/browser/tracking_protection_service_browsertest.cc",
      "//huhi/components/content_settings/renderer/huhi_content_settings_agent_impl_autoplay_browsertest.cc",
      "//huhi/components/content_settings/renderer/huhi_content_settings_agent_impl_browsertest.cc",
      "//huhi/components/content_settings/renderer/huhi_content_settings_agent_impl_flash_browsertest.cc",
      "//huhi/components/l10n/browser/locale_helper_mock.cc",
      "//huhi/components/l10n/browser/locale_helper_mock.h",
      "//huhi/third_party/blink/renderer/modules/huhi/navigator_browsertest.cc",
      "//chrome/browser/extensions/browsertest_util.cc",
      "//chrome/browser/extensions/browsertest_util.h",
      "//chrome/browser/extensions/extension_browsertest.cc",
      "//chrome/browser/extensions/extension_browsertest.h",
      "//chrome/browser/extensions/extension_function_test_utils.cc",
      "//chrome/browser/extensions/extension_function_test_utils.h",
      "//chrome/browser/media/media_browsertest.cc",
      "//chrome/browser/media/media_browsertest.h",
      "//chrome/browser/ui/test/test_browser_dialog.cc",
      "//chrome/browser/ui/test/test_browser_dialog.h",
      "//chrome/browser/ui/test/test_browser_ui.cc",
      "//chrome/browser/ui/test/test_browser_ui.h",
    ]

    if (!is_asan) {
      # Move outside the !is_asan block once
      # https://github.com/huhisoft/huhi-browser/issues/11897
      # https://github.com/huhisoft/huhi-browser/issues/11906 is fixed
      sources += [
        "//huhi/browser/huhi_scheme_load_browsertest.cc",
        "//huhi/browser/ui/webui/new_tab_page/huhi_new_tab_ui_browsertest.cc",
      ]
    }
    if (is_mac) {
      sources += [
        "//chrome/browser/ui/test/test_browser_dialog_mac.h",
        "//chrome/browser/ui/test/test_browser_dialog_mac.mm",
      ]
    }

    deps = [
      "//huhi/browser/tor:browser_tests",
      "//huhi/chromium_src/third_party/blink/renderer/modules:browser_tests",
      "//huhi/components/ipfs/test:huhi_ipfs_browser_tests",
      "//huhi/browser/farbling:browser_tests",
      "//huhi/browser/ui/tabs/test:browser_tests",
      "//media:test_support",
    ]

    if (enable_widevine && !is_asan) {
      # Remove the !is_asan check once
      # https://github.com/huhisoft/huhi-browser/issues/11901 is fixed
      sources += [
        "//huhi/browser/widevine/widevine_permission_request_browsertest.cc",
        "//huhi/browser/widevine/widevine_prefs_migration_browsertest.cc",
      ]
      deps += [ "//huhi/browser/widevine" ]
    }

    if (enable_huhi_perf_predictor) {
      sources += [ "//huhi/components/huhi_perf_predictor/browser/perf_predictor_tab_helper_browsertest.cc" ]

      deps += [
        "//huhi/components/huhi_perf_predictor/browser",
        "//huhi/components/huhi_perf_predictor/common",
        "//components/user_prefs",
      ]
    }

    if (enable_greaselion) {
      sources += [ "//huhi/browser/greaselion/greaselion_browsertest.cc" ]

      deps += [
        "//huhi/browser/greaselion:greaselion",
        "//huhi/components/greaselion/browser",
      ]
    }

    if (huhi_wallet_enabled) {
      sources += [
        "//huhi/browser/extensions/api/huhi_wallet_api_browsertest.cc",
        "//huhi/browser/extensions/huhi_wallet_apitest.cc",
      ]

      deps += [
        "//huhi/browser/infobars",
        "//huhi/components/huhi_wallet",
      ]
    }

    if (binance_enabled && !is_asan) {
      sources += [
        "//huhi/components/binance/browser/binance_service_browsertest.cc",
      ]

      deps += [
        "//huhi/components/binance/browser",
        "//components/country_codes",
      ]
    }

    if (gemini_enabled && !is_asan) {
      sources +=
          [ "//huhi/components/gemini/browser/gemini_service_browsertest.cc" ]
      deps += [
        "//huhi/components/gemini/browser",
      ]
    }

    if (moonpay_enabled) {
      sources += [ "//huhi/browser/extensions/api/moonpay_api_browsertest.cc" ]
      deps += [ "//huhi/components/moonpay/common" ]
    }

    if (crypto_dot_com_enabled) {
      sources += [ "//huhi/components/crypto_dot_com/browser/crypto_dot_com_service_browsertest.cc" ]
    }

    if (huhi_rewards_enabled) {
      sources += [
        "//huhi/components/huhi_ads/browser/ads_service_browsertest.cc",
        "//huhi/components/huhi_ads/browser/notification_helper_mock.cc",
        "//huhi/components/huhi_ads/browser/notification_helper_mock.h",
        "//huhi/components/huhi_rewards/browser/test/common/rewards_browsertest_context_helper.cc",
        "//huhi/components/huhi_rewards/browser/test/common/rewards_browsertest_context_helper.h",
        "//huhi/components/huhi_rewards/browser/test/common/rewards_browsertest_context_util.cc",
        "//huhi/components/huhi_rewards/browser/test/common/rewards_browsertest_context_util.h",
        "//huhi/components/huhi_rewards/browser/test/common/rewards_browsertest_contribution.cc",
        "//huhi/components/huhi_rewards/browser/test/common/rewards_browsertest_contribution.h",
        "//huhi/components/huhi_rewards/browser/test/common/rewards_browsertest_network_util.cc",
        "//huhi/components/huhi_rewards/browser/test/common/rewards_browsertest_network_util.h",
        "//huhi/components/huhi_rewards/browser/test/common/rewards_browsertest_promotion.cc",
        "//huhi/components/huhi_rewards/browser/test/common/rewards_browsertest_promotion.h",
        "//huhi/components/huhi_rewards/browser/test/common/rewards_browsertest_response.cc",
        "//huhi/components/huhi_rewards/browser/test/common/rewards_browsertest_response.h",
        "//huhi/components/huhi_rewards/browser/test/common/rewards_browsertest_util.cc",
        "//huhi/components/huhi_rewards/browser/test/common/rewards_browsertest_util.h",
        "//huhi/components/huhi_rewards/browser/test/rewards_contribution_browsertest.cc",
        "//huhi/components/huhi_rewards/browser/test/rewards_database_browsertest.cc",
        "//huhi/components/huhi_rewards/browser/test/rewards_flag_browsertest.cc",
        "//huhi/components/huhi_rewards/browser/test/rewards_notification_browsertest.cc",
        "//huhi/components/huhi_rewards/browser/test/rewards_promotion_browsertest.cc",
        "//huhi/components/huhi_rewards/browser/test/rewards_publisher_browsertest.cc",
        "//huhi/components/huhi_rewards/browser/test/rewards_state_browsertest.cc",
      ]

      if (!is_asan) {
        # Move this out of the !is_asan block once
        # https://github.com/huhisoft/huhi-browser/issues/11900 is fixed
        sources += [ "//huhi/components/huhi_rewards/browser/test/rewards_browsertest.cc" ]
      }

      deps += [
        "//huhi/components/huhi_ads/browser",
        "//huhi/components/huhi_ads/common",
        "//huhi/components/huhi_rewards/browser",
        "//huhi/vendor/bat-native-ads",
        "//huhi/vendor/bat-native-ledger",
        "//huhi/vendor/bat-native-ledger:publishers_proto",
      ]

      configs += [ "//huhi/vendor/bat-native-ads:internal_config" ]
      configs += [ "//huhi/vendor/bat-native-ledger:internal_config" ]
    }

    if (enable_huhi_wayback_machine) {
      sources += [ "//huhi/components/huhi_wayback_machine/huhi_wayback_machine_browsertest.cc" ]
    }

    if (enable_speedreader) {
      sources += [ "//huhi/browser/speedreader/speedreader_browsertest.cc" ]
      deps += [
        "//huhi/components/speedreader",
      ]
    }

    if (ipfs_enabled) {
      sources += [
        "//huhi/browser/extensions/api/ipfs_apitest.cc",
        "//huhi/browser/ipfs/ipfs_policy_browsertest.cc",
        "//huhi/browser/ipfs/ipfs_tab_helper_browsertest.cc",
      ]
      deps += [
        "//huhi/components/ipfs",
      ]
    }

    if (is_win || is_linux) {
      sources += [ "//huhi/browser/renderer_context_menu/huhi_spelling_options_submenu_observer_browsertest.cc" ]
      deps += [
        "//huhi/browser/renderer_context_menu",
        "//components/language/core/browser",
      ]
    }

    # API tests
    sources += [
      "//huhi/browser/extensions/huhi_shields_apitest.cc",
      "//chrome/browser/extensions/extension_apitest.cc",
      "//chrome/browser/extensions/extension_apitest.h",
    ]

    if (is_linux) {
      sources += [
        "//huhi/browser/ui/views/huhi_views_delegate_linux_browsertest.cc",
      ]
      configs += [ "//huhi/build/linux:linux_channel_names" ]
      deps += [
        "//chrome/app/theme:chrome_unscaled_resources_grit",
      ]
    }

    defines = [ "HAS_OUT_OF_PROC_TEST_RUNNER" ]
    deps += [
      ":huhi_browser_tests_deps",
      "//huhi/app:huhi_generated_resources_grit",
      "//huhi/app:command_ids",
      "//huhi/app/theme:huhi_theme_resources_grit",
      "//huhi/app/theme:huhi_unscaled_resources_grit",
      "//huhi/browser/huhi_stats:stats_updater",
      "//huhi/browser/browsing_data",
      "//huhi/browser:browser_process",
      "//huhi/browser/devtools",
      "//huhi/browser/ephemeral_storage:ephemeral_storage_tests",
      "//huhi/browser/extensions",
      "//huhi/browser/net",
      "//huhi/browser/profiles",
      "//huhi/browser/themes",
      "//huhi/browser/tor",
      "//huhi/browser/ui/tabs",
      "//huhi/browser/ui",
      "//huhi/common:network_constants",
      "//huhi/common:pref_names",
      "//huhi/common:switches",
      "//huhi/components/huhi_component_updater/browser",
      "//huhi/components/huhi_referrals/browser",
      "//huhi/components/huhi_referrals/common",
      "//huhi/components/huhi_rewards/browser/buildflags",
      "//huhi/components/huhi_rewards/common",
      "//huhi/components/huhi_shields/browser",
      "//huhi/components/huhi_shields/common",
      "//huhi/components/huhi_sync/buildflags",
      "//huhi/components/huhi_sync:prefs",
      "//huhi/components/huhi_wallet/buildflags",
      "//huhi/components/huhi_wayback_machine",
      "//huhi/components/huhi_wayback_machine:buildflags",
      "//huhi/components/content_settings/renderer",
      "//huhi/components/crypto_dot_com/browser",
      "//huhi/components/l10n/browser",
      "//huhi/components/ipfs/buildflags",
      "//huhi/components/tor/buildflags",
      "//huhi/components/tor",
      "//chrome/app:command_ids",
      "//chrome/browser:theme_properties",
      "//chrome/browser/ui",
      "//chrome/browser/web_applications/components",
      "//chrome/test:test_support_ui",
      "//components/bookmarks/browser",
      "//components/browsing_data/core",
      "//components/content_settings/browser",
      "//components/content_settings/renderer",
      "//components/crx_file",
      "//components/embedder_support",
      "//components/language/core/common",
      "//components/network_time",
      "//components/permissions",
      "//components/policy/core/browser",
      "//components/policy/core/common:test_support",
      "//components/prefs",
      "//components/safe_browsing/content/web_ui",
      "//components/safe_browsing/core:features",
      "//components/renderer_context_menu",
      "//components/spellcheck/browser",
      "//extensions/common:common_constants",
      "//extensions/browser:test_support",
      "//extensions/common:test_support",
      "//ppapi/buildflags",
      "//services/device/public/cpp:device_features",
      "//third_party/blink/public/common",
      "//ui/compositor:test_support",
      "//ui/views",
    ]

    public_deps = [ ":browser_tests_runner" ]

    # enable_plugins should be used here
    if (!is_android) {
      data_deps = [
        "//ppapi:power_saver_test_plugin",
        "//ppapi:ppapi_tests",
      ]
    }
  }
} else {  # if (!is_android) {
  group("huhi_browser_tests") {
  }
}

# All in this section is for running instrumentation java tests
if (is_android) {
  huhi_public_test_manifest_package = "com.huhi.browser.tests"

  huhi_public_test_apk_manifest =
      "$root_gen_dir/huhi_public_test_apk_manifest/AndroidManifest.xml"

  jinja_template("huhi_public_test_apk_manifest") {
    input = "//huhi/android/javatests/AndroidManifest.xml"
    includes = [ "//chrome/android/java/AndroidManifest.xml" ]
    output = huhi_public_test_apk_manifest
    variables = default_chrome_public_jinja_variables
    variables += [
      "manifest_package=$huhi_public_test_manifest_package",
      "min_sdk_version=19",
      "target_sdk_version=$android_sdk_version",
    ]
  }

  chrome_public_common_apk_or_module_tmpl("huhi_public_test_apk") {
    testonly = true
    target_type = "instrumentation_test_apk"
    apk_name = "HuhiPublicTest"
    android_manifest = huhi_public_test_apk_manifest
    android_manifest_dep = ":huhi_public_test_apk_manifest"
    shared_libraries = [ "//chrome/android:libchromefortest" ]
    if (!is_java_debug) {
      proguard_enabled = true
      proguard_configs = [ "//huhi/android/java/apk_for_test.flags" ]
    }

    sources = [
      "//huhi/android/javatests/org/chromium/chrome/browser/HuhiPrivateTabTest.java",
      "//huhi/android/javatests/org/chromium/chrome/browser/BytecodeTest.java",
    ]

    deps = [
      "//base:base_java",
      "//base:base_java_test_support",
      "//chrome/android:chrome_apk_pak_assets",
      "//chrome/android:chrome_public_base_module_java_for_test",
      "//chrome/browser/preferences:java",
      "//chrome/browser/tab:java",
      "//chrome/test/android:chrome_java_test_support",
      "//components/search_engines/android:java",
      "//components/sync/android:sync_java",
      "//third_party/android_support_test_runner:runner_java",
      "//third_party/junit",
    ]
  }
}  # if (is_android) {
