source_set("browsing_data") {
  # Remove when https://github.com/huhisoft/huhi-browser/issues/10657 is resolved
  check_includes = false
  sources = [
    "huhi_browsing_data_remover_delegate.cc",
    "huhi_browsing_data_remover_delegate.h",
    "huhi_clear_browsing_data.cc",
    "huhi_clear_browsing_data.h",
    "counters/huhi_site_settings_counter.cc",
    "counters/huhi_site_settings_counter.h",
  ]

  deps = [
    "//base",
    "//chrome/common",
    "//components/browsing_data/core",
    "//components/content_settings/core/browser",
    "//components/content_settings/core/common",
    "//components/prefs",
    "//content/public/browser",
  ]
}
